--- a/KendoUI/Views/Home/Index.cshtml
+++ b/KendoUI/Views/Home/Index.cshtml
@@ -49,19 +49,19 @@
                 "pdf",
                 "copyFormat", "applyFormat",
             ],
-            //imageBrowser: {
-            //    transport: {
-            //        read: "imagebrowser/read",
-            //        destroy: "imagebrowser/destroy",
-            //        create: "imagebrowser/createDirectory",
-            //        uploadUrl: "imagebrowser/upload",
-            //        thumbnailUrl: "imagebrowser/thumbnail",
-            //        imageUrl: "~/wwwroot/UserFiles/Images/{0}"
+            imageBrowser: {
+                transport: {
+                    read: "imagebrowser/read",
+                    destroy: "imagebrowser/destroy",
+                    create: "imagebrowser/createDirectory",
+                    uploadUrl: "imagebrowser/upload",
+                    thumbnailUrl: "imagebrowser/thumbnail",
+                    imageUrl: "~/wwwroot/UserFiles/Images/{0}"
 
-            //        //action/controller
-            //    },
-            //    path: "~/wwwroot/UserFiles/Images"
-            //}
+                    //action/controller
+                },
+                path: "~/wwwroot/UserFiles/Images"
+            }
         });
 
 
