--- a/KendoUI/Views/Home/Index.cshtml
+++ b/KendoUI/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
             ],
             imageBrowser: {
                 transport: {
-                    read: "imagebrowser/Read",
+                    read: "imagebrowser/read",
                     destroy: "imagebrowser/destroy",
                     create: "imagebrowser/createDirectory",
                     uploadUrl: "imagebrowser/upload",
