--- a/Study/Views/Shared/_Layout.cshtml
+++ b/Study/Views/Shared/_Layout.cshtml
@@ -12,8 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Mochiy+Pop+P+One&family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        @RenderBody()
+    </div>
 
-    @RenderBody()
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
