--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -5,12 +5,32 @@
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="args=>Sum(a,b)">Click me</button>
+<input type="number" name="a" value="@a" />
+<input type="number" name="b" value="@b" />
+<p>Sum: @sum</p>
+
 
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int incrementCount { get; set; } = 2;
+
     private void IncrementCount()
     {
-        currentCount++;
+        currentCount += incrementCount;
+    }
+
+    private int sum = 0;
+
+    [Parameter]
+    public int a { get; set; }
+    [Parameter]
+    public int b { get; set; }
+
+    private int Sum(int a, int b)
+    {
+        return sum = a + b;
     }
 }
