--- a/Gigamall/Views/Home/Brand.cshtml
+++ b/Gigamall/Views/Home/Brand.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="info-group">
-                <h1 class="title-group-home"><a href="/vn/thuong-hieu/" alt="Thương hiệu">Thương hiệu</a></h1>
+                <h1 class="title-group-home"><a href="javascript:void(0)" alt="Thương hiệu">Thương hiệu</a></h1>
             </div>
             <div class="search-filter">
                 <div>
@@ -85,58 +85,58 @@
                 </div>
                 <div class="store-list" id="store_list">
                     <div class="col-store-item store_alpha_w store_floor_30">
-                        <a href="/vn/am-thuc/wrap-roll/" title="WRAP &amp; ROLL" alt="WRAP &amp; ROLL">
+                        <a href="javascript:void(0)" title="WRAP &amp; ROLL" alt="WRAP &amp; ROLL">
                             <div class="bg-store-item">
                                 @* <img src="/data/2019/09/03/15433129_LOGO-Wrap-_-Roll---600x600.png" alt="LOGO-Wrap-_-Roll---600x600" />*@
                                 <img src="/data/2019/09/03/15433129_LOGO-Wrap-_-Roll---600x600_thumbnail.png" alt="LOGO-Wrap-_-Roll---600x600" />
                             </div>
                         </a>
                         <div class="info-store-item">
-                            <a href="/vn/am-thuc/wrap-roll/" title="WRAP &amp; ROLL" alt="WRAP &amp; ROLL"><span>WRAP &amp; ROLL</span></a>
+                            <a href="javascript:void(0)" title="WRAP &amp; ROLL" alt="WRAP &amp; ROLL"><span>WRAP &amp; ROLL</span></a>
                             <div>
                                 <p class="floor-map-item"><a href="/vn/so-do-tang/"># L3_02</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-store-item store_alpha_b store_floor_40">
-                        <a href="/vn/lam-dep-suc-khoe/bb-wellness/" title="BB WELLNESS" alt="BB WELLNESS">
+                        <a href="javascript:void(0)" title="BB WELLNESS" alt="BB WELLNESS">
                             <div class="bg-store-item">
                                 <img src="/data/2021/03/26/15360393_LOGO-BB-WELLNESS-900X900.jpg" alt="LOGO-BB-WELLNESS-900X900" />
                             </div>
                         </a>
                         <div class="info-store-item">
-                            <a href="/vn/lam-dep-suc-khoe/bb-wellness/" title="BB WELLNESS" alt="BB WELLNESS"><span>BB WELLNESS</span></a>
+                            <a href="javascript:void(0)" title="BB WELLNESS" alt="BB WELLNESS"><span>BB WELLNESS</span></a>
                             <div>
-                                <p class="floor-map-item"><a href="/vn/so-do-tang/"># L4-09D</a></p>
+                                <p class="floor-map-item"><a href="javascript:void(0)"># L4-09D</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-store-item store_alpha_c store_floor_0">
-                        <a href="/vn/am-thuc/chuk-chuk/" title="CHUK CHUK" alt="CHUK CHUK">
+                        <a href="javascript:void(0)" title="CHUK CHUK" alt="CHUK CHUK">
                             <div class="bg-store-item"><img src="/data/2021/11/30/12190067_logochukchuk.jpg" alt="logochukchuk" /></div>
                         </a>
                         <div class="info-store-item">
-                            <a href="/vn/am-thuc/chuk-chuk/" title="CHUK CHUK" alt="CHUK CHUK"><span>CHUK CHUK</span></a>
+                            <a href="javascript:void(0)" title="CHUK CHUK" alt="CHUK CHUK"><span>CHUK CHUK</span></a>
                             <div><p class="floor-map-item"></p></div>
                         </div>
                     </div>
                     <div class="col-store-item store_alpha_v store_floor_10">
-                        <a href="/vn/thoi-trang-phu-kien/viettien-house/" title="VIETTIEN HOUSE" alt="VIETTIEN HOUSE">
+                        <a href="javascript:void(0)" title="VIETTIEN HOUSE" alt="VIETTIEN HOUSE">
                             <div class="bg-store-item"><img src="/data/2021/03/26/15385835_LOGO-VIETTIEN-900X900.png" alt="LOGO-VIETTIEN-900X900" /></div>
                         </a>
                         <div class="info-store-item">
-                            <a href="/vn/thoi-trang-phu-kien/viettien-house/" title="VIETTIEN HOUSE" alt="VIETTIEN HOUSE"><span>VIETTIEN HOUSE</span></a>
+                            <a href="javascript:void(0)" title="VIETTIEN HOUSE" alt="VIETTIEN HOUSE"><span>VIETTIEN HOUSE</span></a>
                             <div>
-                                <p class="floor-map-item"><a href="/vn/so-do-tang/"># L1_15</a></p>
+                                <p class="floor-map-item"><a href="javascript:void(0)"># L1_15</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-store-item store_alpha_j store_floor_40">
-                        <a href="/vn/khac/jbl-vietnam/" title="JBL VIETNAM" alt="JBL VIETNAM">
+                        <a href="javascript:void(0)" title="JBL VIETNAM" alt="JBL VIETNAM">
                             <div class="bg-store-item"><img src="/data/2019/09/06/17042372_logo-JBL.jpg" alt="logo-JBL" /></div>
                         </a>
                         <div class="info-store-item">
-                            <a href="/vn/khac/jbl-vietnam/" title="JBL VIETNAM" alt="JBL VIETNAM"><span>JBL VIETNAM</span></a>
+                            <a href="javascript:void(0)" title="JBL VIETNAM" alt="JBL VIETNAM"><span>JBL VIETNAM</span></a>
                             <div>
                                 <p class="floor-map-item"><a href="/vn/so-do-tang/"># L4-26AB</a></p>
                             </div>
