--- a/Gigamall/Views/Home/Member.cshtml
+++ b/Gigamall/Views/Home/Member.cshtml
@@ -8,11 +8,11 @@
         <div class="row">
             <div class="info-group">
                 <h1 class="title-group-home">
-                    <a href="/vn/thanh-vien/" alt="Thành viên">Thành viên</a>
+                    <a href="javascript:void(0)" alt="Thành viên">Thành viên</a>
                 </h1>
                 <div class="list-group">
-                    <a class="active" href="/vn/thanh-vien/the-thanh-vien/">Thẻ thành viên</a>
-                    <a href="/vn/thanh-vien/chuong-trinh-dac-quyen/">Chương trình đặc quyền</a>
+                    <a class="active" href="javascript:void(0)">Thẻ thành viên</a>
+                    <a href="javascript:void(0)">Chương trình đặc quyền</a>
                 </div>
             </div>
             <div class="col-md-6 member-right">
@@ -31,7 +31,7 @@
                         document.fmlogin.submit();
                     }
                 </script>
-                <form id="fmlogin" name="fmlogin" action="/vn/thanh-vien/the-thanh-vien/" method="post">
+                <form id="fmlogin" name="fmlogin" action="javascript:void(0)" method="post">
                     <div class="fmcontact-form contact">
                         <div class="row">
                             <div class="col-md-12">
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div id="view_content">
                         <h2>
-                            <span>Ứng dụng GIGAMALL</span>
+                            <span>Ứng dụng THISO Mall</span>
                         </h2>
                     </div>
                     <div class="app">
