--- a/Gigamall/Views/Home/Utilities.cshtml
+++ b/Gigamall/Views/Home/Utilities.cshtml
@@ -43,7 +43,7 @@
                     </h4>
                     <div class="des-article-item-utilities">
                         <p>
-                            <span>Nhằm mang lại sự thỏa mái trong thời gian mua sắm tại TTTM GIGAMALL, chúng tôi có sẵn Dịch Vụ Xe Đẩy Em Bé và Xe Lăn miễn phí để hỗ trợ cho Quý khách. Xin vui lòng liên hệ Quầy Dịch Vụ Khách Hàng tại tầng 01.</span>
+                            <span>Nhằm mang lại sự thỏa mái trong thời gian mua sắm tại TTTM THISO Mall, chúng tôi có sẵn Dịch Vụ Xe Đẩy Em Bé và Xe Lăn miễn phí để hỗ trợ cho Quý khách. Xin vui lòng liên hệ Quầy Dịch Vụ Khách Hàng tại tầng 01.</span>
                         </p>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     </h4>
                     <div class="des-article-item-utilities">
                         <p>
-                            <span>Khách hàng có thể truy cập Wifi miễn phí tại tất cả các khu vực công cộng trong TTTM Gigamall.&nbsp;</span>
+                            <span>Khách hàng có thể truy cập Wifi miễn phí tại tất cả các khu vực công cộng trong TTTM THISO Mall.&nbsp;</span>
                         </p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <a title="KHAI BÁO Y TẾ" alt="KHAI BÁO Y TẾ">KHAI BÁO Y TẾ</a>
                     </h4>
                     <div class="des-article-item-utilities">
-                        <p>ỨNG DỤNG KHAI BÁO Y TẾ PHÒNG DỊCH CHO TOÀN BỘ NHÂN VIÊN TẠI TTTM GIGAMALL</p>
+                        <p>ỨNG DỤNG KHAI BÁO Y TẾ PHÒNG DỊCH CHO TOÀN BỘ NHÂN VIÊN TẠI TTTM THISO Mall</p>
                     </div>
                 </div>
             </div>
