--- a/Gigamall/Views/Shared/_Subcribe.cshtml
+++ b/Gigamall/Views/Shared/_Subcribe.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-7">
-                <p>Hãy trở thành những khách hàng đầu tiên cập nhật các thông tin ưu đãi, khuyến mãi, giải trí hiện đại và cẩm nang mua sắm thông minh từ các thương hiệu hàng đầu tại GIGAMALL.</p>
+                <p>Hãy trở thành những khách hàng đầu tiên cập nhật các thông tin ưu đãi, khuyến mãi, giải trí hiện đại và cẩm nang mua sắm thông minh từ các thương hiệu hàng đầu tại THISO Mall.</p>
             </div>
             <div class="col-sm-5">
                 <div class="subscribe-input">
