--- a/Gigamall/Views/Shared/_Footer.cshtml
+++ b/Gigamall/Views/Shared/_Footer.cshtml
@@ -4,10 +4,11 @@
             <div class="col-md-6">
                 <div>
                     <p style="margin: 0;">
-                        <img src="~/images/logo-footer.png" alt="GIGAMALL">
+                        @*<img src="~/images/logo-footer.png" alt="GIGAMALL">*@
+                        <img src="~/images/THACO/GoldLogoSmallCut.png" width="280" height="150" />
                     </p>
                     <div class="info-company">
-                        <h3>TRUNG TÂM THƯƠNG MẠI GIGAMALL</h3>
+                        <h3>TRUNG TÂM THƯƠNG MẠI THISO MALL</h3>
                         <p>
                             <img src="~/images/location-icon.png"><span>240-242 Phạm Văn Đồng, P. Hiệp Bình Chánh, Q. Thủ Đức, Tp.HCM</span>
                         </p><p><img src="~/images/phone-icon.png"><span>(028) 7100 3839 | 7109 3839</span></p><p><img src="~/images/mail-icon.png"><a href="mailto:dvkh@gigamall.com.vn">dvkh@gigamall.com.vn</a></p><div class="operatyon-time">
@@ -30,38 +31,38 @@
                     <div class="col-md-4">
                         <ul class="link-footer">
                             <li><a>Thông tin</a></li>
-                            <li><a href="/vn/">Trang chủ</a></li>
-                            <li><a href="/vn/gioi-thieu/" alt="Giới thiệu">Giới thiệu</a></li>
-                            <li><a href="/vn/khuyen-mai/" alt="Khuyến mãi">Khuyến mãi</a></li>
-                            <li><a href="/vn/tin-tuc-su-kien/" alt="Tin tức &amp; Sự kiện">Tin tức &amp; Sự kiện</a></li>
-                            <li><a href="/vn/thuong-hieu/" alt="Thương hiệu">Thương hiệu</a></li>
-                            <li><a href="/vn/thanh-vien/" alt="Thành viên">Thành viên</a></li>
-                            <li><a href="/vn/so-do-tang/" alt="Sơ đồ tầng">Sơ đồ tầng</a></li>
-                            <li><a href="/vn/tien-ich/" alt="Tiện ích">Tiện ích</a></li>
-                            <li><a href="/vn/lien-he/" alt="Liên hệ">Liên hệ</a></li>
+                            <li><a href="javascript:void(0)">Trang chủ</a></li>
+                            <li><a href="javascript:void(0)" alt="Giới thiệu">Giới thiệu</a></li>
+                            <li><a href="javascript:void(0)" alt="Khuyến mãi">Khuyến mãi</a></li>
+                            <li><a href="javascript:void(0)" alt="Tin tức &amp; Sự kiện">Tin tức &amp; Sự kiện</a></li>
+                            <li><a href="javascript:void(0)" alt="Thương hiệu">Thương hiệu</a></li>
+                            <li><a href="javascript:void(0)" alt="Thành viên">Thành viên</a></li>
+                            <li><a href="javascript:void(0)" alt="Sơ đồ tầng">Sơ đồ tầng</a></li>
+                            <li><a href="javascript:void(0)" alt="Tiện ích">Tiện ích</a></li>
+                            <li><a href="javascript:void(0)" alt="Liên hệ">Liên hệ</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <ul class="link-footer">
-                            <li><a href="/vn/thuong-hieu/" alt="Thương hiệu">Thương hiệu</a></li>
-                            <li><a href="/vn/am-thuc/" alt="Ẩm thực">Ẩm thực</a></li>
-                            <li><a href="/vn/dien-may/" alt="Điện máy">Điện máy</a></li>
-                            <li><a href="/vn/chan-goi-nem-noi-that/" alt="Chăn gối nệm &amp; Nội thất">Chăn gối nệm &amp; Nội thất</a></li>
-                            <li><a href="/vn/giao-duc/" alt="Giáo dục">Giáo dục</a></li>
-                            <li><a href="/vn/my-pham-nuoc-hoa/" alt="Mỹ phẩm &amp; Nước hoa">Mỹ phẩm &amp; Nước hoa</a></li>
-                            <li><a href="/vn/thoi-trang-phu-kien/" alt="Thời trang &amp; Phụ kiện">Thời trang &amp; Phụ kiện</a></li>
-                            <li><a href="/vn/khac/" alt="Khác">Khác</a></li>
+                            <li><a href="javascript:void(0)" alt="Thương hiệu">Thương hiệu</a></li>
+                            <li><a href="javascript:void(0)" alt="Ẩm thực">Ẩm thực</a></li>
+                            <li><a href="javascript:void(0)" alt="Điện máy">Điện máy</a></li>
+                            <li><a href="javascript:void(0)" alt="Chăn gối nệm &amp; Nội thất">Chăn gối nệm &amp; Nội thất</a></li>
+                            <li><a href="javascript:void(0)" alt="Giáo dục">Giáo dục</a></li>
+                            <li><a href="javascript:void(0)" alt="Mỹ phẩm &amp; Nước hoa">Mỹ phẩm &amp; Nước hoa</a></li>
+                            <li><a href="javascript:void(0)" alt="Thời trang &amp; Phụ kiện">Thời trang &amp; Phụ kiện</a></li>
+                            <li><a href="javascript:void(0)" alt="Khác">Khác</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <ul class="link-footer">
                             <li><a></a></li>
-                            <li><a href="/vn/cua-hang-tien-ich/" alt="Cửa hàng tiện ích">Cửa hàng tiện ích</a></li>
-                            <li><a href="/vn/gia-dung/" alt="Gia dụng">Gia dụng</a></li>
-                            <li><a href="/vn/giai-tri/" alt="Giải trí">Giải trí</a></li>
-                            <li><a href="/vn/lam-dep-suc-khoe/" alt="Làm đẹp &amp; sức khỏe">Làm đẹp &amp; sức khỏe</a></li>
-                            <li><a href="/vn/sieu-thi/" alt="Siêu thị">Siêu thị</a></li>
-                            <li><a href="/vn/the-thao/" alt="Thể thao">Thể thao</a></li>
+                            <li><a href="javascript:void(0)" alt="Cửa hàng tiện ích">Cửa hàng tiện ích</a></li>
+                            <li><a href="javascript:void(0)" alt="Gia dụng">Gia dụng</a></li>
+                            <li><a href="javascript:void(0)" alt="Giải trí">Giải trí</a></li>
+                            <li><a href="javascript:void(0)" alt="Làm đẹp &amp; sức khỏe">Làm đẹp &amp; sức khỏe</a></li>
+                            <li><a href="javascript:void(0)" alt="Siêu thị">Siêu thị</a></li>
+                            <li><a href="javascript:void(0)" alt="Thể thao">Thể thao</a></li>
                         </ul>
                     </div>
                     <div class="col-md-12 download-app">
@@ -69,7 +70,7 @@
                             <div class="col-sm-4">
                                 <div>
                                     <p>TẢI NGAY</p>
-                                    <p>APP GIGAMALL</p><p>Tích điểm - đổi quà</p><p>Nhận muôn vàn ưu đãi!</p>
+                                    <p>APP THISO Mall</p><p>Tích điểm - đổi quà</p><p>Nhận muôn vàn ưu đãi!</p>
                                 </div>
                             </div>
                             <div class="col-sm-8">
@@ -90,5 +91,5 @@
             </div>
         </div>
     </div>
-    <p class="copy-right">© Bản quyền 2022 của Công ty Cổ phần Đầu tư Thương mại Dịch vụ Gigamall Việt Nam</p>
+    <p class="copy-right">© Bản quyền 2022 của Công ty Cổ phần Đầu tư Thương mại Dịch vụ THISO Mall Việt Nam</p>
 </footer>
