--- a/Gigamall/Views/Shared/_Header.cshtml
+++ b/Gigamall/Views/Shared/_Header.cshtml
@@ -3,12 +3,14 @@
         <div class="header-top">
             <div class="logo">
                 <a asp-controller="Home" asp-action="Index">
-                    <img src="/images/logo.png" alt="GIGAMALL">
+                    @*<img src="/images/logo.png" alt="GIGAMALL">*@
+                    <img src="~/images/THACO/GoldLogoCut.png" />
+
                 </a>
             </div>
             <div class="header-right">
                 <div class="info-gigamall-header">
-                    <h2>TRUNG TÂM THƯƠNG MẠI GIGAMALL</h2>
+                    <h2>TRUNG TÂM THƯƠNG MẠI THISO MALL</h2>
                     <p>240 - 242 Phạm Văn Đồng,<br>P. Hiệp Bình Chánh,&nbsp;Q. Thủ Đức, TP.HCM</p>
                     <p>Hotline: 028 666 00222 - Email: info@gigamall.com.vn</p>
                 </div>
@@ -23,7 +25,7 @@
                                 <span class="submenu-button"></span>
                                 <a asp-action="Introduction" asp-controller="Home" alt="Giới thiệu">Giới thiệu</a>
                                 <ul>
-                                    <li><a style="" href="javascript:void(0)" alt="Về GIGAMALL">Về GIGAMALL</a></li>
+                                    <li><a style="" href="javascript:void(0)" alt="Về GIGAMALL">Về THISO MALL</a></li>
                                     <li><a style="" href="javascript:void(0)" alt="Tuyển dụng">Tuyển dụng</a></li>
                                 </ul>
                             </li>
