--- a/Gigamall/Views/Home/LoginWifi.cshtml
+++ b/Gigamall/Views/Home/LoginWifi.cshtml
@@ -13,7 +13,7 @@
                     <input type="tel" class="form-control w-75" placeholder="Số điện thoại">
                 </div>
                 <div class="d-grid gap-2">
-                    <button class="btn" type="button" onclick="location.href='@Url.Action("DetailLoginWifi", "Home" )'">Connect</button>
+                    <button class="btn" type="button" onclick="location.href='@Url.Action("DetailLoginWifi", "Home" )'">Connect Wifi</button>
                 </div>
             </div>
 
