--- a/Gigamall/Views/Home/Promotion.cshtml
+++ b/Gigamall/Views/Home/Promotion.cshtml
@@ -127,7 +127,7 @@
                                     <h4>
                                         <a href="javascript:void(0)" title="TƯNG BỪNG ĐÓN HÈ CÙNG ONWAYS SUMMER SALE 2022" alt="TƯNG BỪNG ĐÓN HÈ CÙNG ONWAYS SUMMER SALE 2022">TƯNG BỪNG ĐÓN HÈ CÙNG ONWAYS SUMMER SALE 2022</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                     <h4>
                                         <a href="javascript:void(0)" title="THÁNG 4 LÀ LỜI NÓI THẬT CỦA AKEMI" alt="THÁNG 4 LÀ LỜI NÓI THẬT CỦA AKEMI">THÁNG 4 LÀ LỜI NÓI THẬT CỦA AKEMI</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                                     <h4>
                                         <a href="javascript:void(0)" title="[SUPER FAN DAY] FAN 3CE KHÔNG THỂ BỎ LỠ ƯU ĐÃI NÀY" alt="[SUPER FAN DAY] FAN 3CE KHÔNG THỂ BỎ LỠ ƯU ĐÃI NÀY">[SUPER FAN DAY] FAN 3CE KHÔNG THỂ BỎ LỠ ƯU ĐÃI NÀY</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
