--- a/Gigamall/Views/Shared/_Footer.cshtml
+++ b/Gigamall/Views/Shared/_Footer.cshtml
@@ -10,20 +10,29 @@
                     <div class="info-company">
                         <h3>TRUNG TÂM THƯƠNG MẠI THISO MALL</h3>
                         <p>
-                            <img src="~/images/location-icon.png"><span>240-242 Phạm Văn Đồng, P. Hiệp Bình Chánh, Q. Thủ Đức, Tp.HCM</span>
-                        </p><p><img src="~/images/phone-icon.png"><span>(028) 7100 3839 | 7109 3839</span></p><p><img src="~/images/mail-icon.png"><a href="mailto:dvkh@gigamall.com.vn">dvkh@gigamall.com.vn</a></p><div class="operatyon-time">
+                            <img src="~/images/location-icon.png"><span>SOFIC TOWER - 10 Mai Chi Tho, Thu Duc City, Ho Chi Minh City</span>
+                        </p><p><img src="~/images/phone-icon.png"><span>(028) 37425566</span></p><p><img src="~/images/mail-icon.png"><a href="mailto:dvkh@gigamall.com.vn">info@thisomall.com.vn</a></p><div class="operatyon-time">
                             <p><strong>Thời gian hoạt động</strong></p>
                             <p>Thứ Hai - Thứ Sáu&nbsp;| 9:30 - 22:00</p>
                             <p>Thứ Bảy &amp; Chủ Nhật | 9:00 - 22:00</p>
                         </div><div class="social">
                             <p>
-                                <a href="https://www.facebook.com/gigamallvietnam/" target="_blank"><img src="~/images/social-f.png" alt=""></a><a href="https://www.instagram.com/gigamall_vietnam/" target="_blank"><img src="~/images/social-intagram.png" alt=""></a><a href="https://www.youtube.com/channel/UCfO8mX8z8GrP1SQIzzt2o_A?view_as=subscriber" target="_blank"><img src="~/images/social-youtube.png" alt=""></a>
+                                <a href="javascript:void(0)">
+                                    <img src="~/images/social-f.png" alt="">
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="~/images/social-intagram.png" alt="">
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="~/images/social-youtube.png" alt="">
+                                </a>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.781420981458!2d106.71968241474188!3d10.828032492286589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752910b8ffbc9b%3A0xc26e001301184576!2zVFRUTSBHaWdhIG1hbGwgUGjhuqFtIFbEg24gxJDhu5NuZyAtIFRo4bunIMSQ4bupYyAoIFNpw6p1IHRo4buLIFNlbnNlIENpdHkgdnMgQ28ub3B4dHJhICk!5e0!3m2!1sen!2sus!4v1564645858014!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+                    @*<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.781420981458!2d106.71968241474188!3d10.828032492286589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752910b8ffbc9b%3A0xc26e001301184576!2zVFRUTSBHaWdhIG1hbGwgUGjhuqFtIFbEg24gxJDhu5NuZyAtIFRo4bunIMSQ4bupYyAoIFNpw6p1IHRo4buLIFNlbnNlIENpdHkgdnMgQ28ub3B4dHJhICk!5e0!3m2!1sen!2sus!4v1564645858014!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen=""></iframe>*@
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.506201236267!2d106.7209263628661!3d10.77248822323622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752fcdd2041771%3A0xa46e9842e044baf4!2sSOFIC%20Tower!5e0!3m2!1svi!2s!4v1652782771710!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <div class="col-md-6">
@@ -77,10 +86,10 @@
                                 <div class="app">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <img src="~/images/app/IOS-QRC.png"><a href="https://itunes.apple.com/us/app/gigamall-vietnam/id1448013961?ls=1&amp;mt=8" target="_blank"><img src="~/images/app/app-store.png"></a>
+                                            <img src="~/images/app/IOS-QRC.png"><a href="javascript:void(0)"><img src="~/images/app/app-store.png"></a>
                                         </div>
                                         <div class="col-md-6">
-                                            <img src="~/images/app/Android.png"><a href="https://play.google.com/store/apps/details?id=com.ms_apptech.gigamall" target="_blank"><img src="~/images/app/google-play.png"></a>
+                                            <img src="~/images/app/Android.png"><a href="javascript:void(0)"><img src="~/images/app/google-play.png"></a>
                                         </div>
                                     </div>
                                 </div>
