--- a/Gigamall/Views/Shared/_Layout.cshtml
+++ b/Gigamall/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 
-    <link rel="icon" href="/images/logo.png" />
+    <link rel="icon" href="/images/THACO/GoldLogoSmallCut.png" />
 
 
     <meta name="description" content="Trung t&#226;m Thương mại (TTTM) Gigamall 240-242 Phạm Văn Đồng, quận Thủ Đức tọa lạc tại vị tr&#237; chiến lược tr&#234;n trục đường ch&#237;nh của Tp. Hồ Ch&#237; Minh. TTTM Gigamall gồm 7 tầng nổi v&#224; 2 tầng hầm với đa dạng c&#225;c ng&#224;nh h&#224;ng như thời trang, phụ kiện, gia dụng, ẩm thực, giải tr&#237;… v&#224; dịch vụ văn ph&#242;ng cho thu&#234;. Đ&#226;y l&#224; TTTM đầu ti&#234;n c&#243; d&#224;n đ&#232;n LED Di.Crystal v&#224; s&#224;n tương t&#225;c LED tại Việt Nam. Khu giải tr&#237; JP World tại tầng L6 mang đến cho kh&#225;ch h&#224;ng nhiều trải nghiệm giải tr&#237; c&#244;ng nghệ tương t&#225;c đỉnh cao.">
