--- a/Gigamall/Views/Home/Event.cshtml
+++ b/Gigamall/Views/Home/Event.cshtml
@@ -23,7 +23,9 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="MỘT SỰ KIỆN HOÀNH TRÁNG KHÔNG NÊN BỎ LỠ" alt="MỘT SỰ KIỆN HOÀNH TRÁNG KHÔNG NÊN BỎ LỠ"><div style="background-image: url('/data/2022/04/13/02282634_hatgaolangta900x900.jpg');"></div></a>
+                                <a href="javascript:void(0)" title="MỘT SỰ KIỆN HOÀNH TRÁNG KHÔNG NÊN BỎ LỠ" alt="MỘT SỰ KIỆN HOÀNH TRÁNG KHÔNG NÊN BỎ LỠ">
+                                    <div style="background-image: url('/data/2022/04/13/02282634_hatgaolangta900x900.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
@@ -59,7 +61,7 @@
                             <div class="info-article-item">
                                 <div>
                                     <h4>
-                                        <a href="javascript:void(0)" title="TẢI APP GIGA – THẢ GA CHỌN QUÀ" alt="TẢI APP GIGA – THẢ GA CHỌN QUÀ">TẢI APP GIGA – THẢ GA CHỌN QUÀ</a>
+                                        <a href="javascript:void(0)" title="TẢI APP GIGA – THẢ GA CHỌN QUÀ" alt="TẢI APP GIGA – THẢ GA CHỌN QUÀ">TẢI APP – THẢ GA CHỌN QUÀ</a>
                                     </h4><div class="des-article-item">11/04 - 01/05/2022</div>
                                 </div>
                             </div>
@@ -68,14 +70,16 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR" alt="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR"><div style="background-image: url('/data/2022/04/04/23520224_27772863029836103185955703557192015859416385n.png');"></div></a>
+                                <a href="javascript:void(0)" title="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR" alt="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR">
+                                    <div style="background-image: url('/data/2022/04/04/23520224_27772863029836103185955703557192015859416385n.png');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
                                     <h4>
                                         <a href="javascript:void(0)" title="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR" alt="CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN FAIR"> CHÀO HÈ RỘN RÀNG SĂN KHUYẾN MÃI - SALE UP TO 50% CÙNG KOHNAN JAPAN...</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +87,9 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="TẢI APP NGAY NHẬN QÙA MÊ SAY" alt="TẢI APP NGAY NHẬN QÙA MÊ SAY"><div style="background-image: url('/data/2022/03/28/01000973_tai-app2.png');"></div></a>
+                                <a href="javascript:void(0)" title="TẢI APP NGAY NHẬN QÙA MÊ SAY" alt="TẢI APP NGAY NHẬN QÙA MÊ SAY">
+                                    <div style="background-image: url('/data/2022/03/28/01000973_tai-app2.png');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
@@ -102,7 +108,7 @@
                             <div class="info-article-item">
                                 <div>
                                     <h4>
-                                        <a href="javascript:void(0)" title="CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN GIGAMALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI THƯƠNG" alt="CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN GIGAMALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI THƯƠNG"> CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN GIGAMALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI...</a>
+                                        <a href="javascript:void(0)" title="CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN GIGAMALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI THƯƠNG" alt="CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN GIGAMALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI THƯƠNG"> CÔNG BỐ KẾT QUẢ WORKSHOP 8/3 - ĐẾN THISO MALL LÀM THIỆP HANDMADE GỬI TẶNG NGƯỜI...</a>
                                     </h4>
                                     <div class="des-article-item">15/03/2022</div>
                                 </div>
@@ -112,7 +118,9 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="CUỘC THI: VIẾT LỜI YÊU THƯƠNG TRAO NGAY QUÀ TẶNG" alt="CUỘC THI: VIẾT LỜI YÊU THƯƠNG TRAO NGAY QUÀ TẶNG"><div style="background-image: url('/data/2022/03/05/00575428_ee85b246161dd943800c.jpg');"></div></a>
+                                <a href="javascript:void(0)" title="CUỘC THI: VIẾT LỜI YÊU THƯƠNG TRAO NGAY QUÀ TẶNG" alt="CUỘC THI: VIẾT LỜI YÊU THƯƠNG TRAO NGAY QUÀ TẶNG">
+                                    <div style="background-image: url('/data/2022/03/05/00575428_ee85b246161dd943800c.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
@@ -127,12 +135,14 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA" alt="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA"><div style="background-image: url('/data/2022/02/28/00240995_27462308429562280380004657887380037241146119n.jpg');"></div></a>
+                                <a href="javascript:void(0)" title="CHÀO THÁNG 3 TẢI APP NHẬN QUÀ THẢ GA" alt="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA">
+                                    <div style="background-image: url('/data/2022/02/28/00240995_27462308429562280380004657887380037241146119n.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
                                     <h4>
-                                        <a href="javascript:void(0)" title="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA" alt="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA">CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA</a>
+                                        <a href="javascript:void(0)" title="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA" alt="CHÀO THÁNG 3 TẢI APP GIGA NHẬN QUÀ THẢ GA">CHÀO THÁNG 3 TẢI APP NHẬN QUÀ THẢ GA</a>
                                     </h4>
                                     <div class="des-article-item">19/02 - 20/03/2022</div>
                                 </div>
@@ -142,12 +152,14 @@
                     <div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ" alt="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ"><div style="background-image: url('/data/2022/02/10/12425083_3582f2aab1a67df824b7.jpg');"></div></a>
+                                <a href="javascript:void(0)" title="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ" alt="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ">
+                                    <div style="background-image: url('/data/2022/02/10/12425083_3582f2aab1a67df824b7.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
                                     <h4>
-                                        <a href="javascript:void(0)" title="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ" alt="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ"> SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU...</a>
+                                        <a href="javascript:void(0)" title="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ" alt="SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT GIGAMALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU KỲ"> SỰ KIỆN ÂM NHẠC MỪNG SINH NHẬT THISO MALL “ĐÓN TUỔI MỚI - ĐÓN VẠN DIỆU...</a>
                                     </h4>
                                     <div class="des-article-item">12/02/2022</div>
                                 </div>
@@ -156,14 +168,16 @@
                     </div><div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ" alt="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ"><div style="background-image: url('/data/2022/01/31/23025109_27302640329409712928594732092971007594744025n.jpg');"></div></a>
+                                <a href="javascript:void(0)" title="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ" alt="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ">
+                                    <div style="background-image: url('/data/2022/01/31/23025109_27302640329409712928594732092971007594744025n.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
                                     <h4>
                                         <a href="javascript:void(0)" title="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ" alt="MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ">MỞ APP CHẠM TAY CÓ NGAY LÌ XÌ</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
@@ -178,16 +192,18 @@
                             <div class="info-article-item">
                                 <div>
                                     <h4>
-                                        <a href="javascript:void(0)" title="LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI GIGAMALL" alt="LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI GIGAMALL">LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI GIGAMALL</a>
+                                        <a href="javascript:void(0)" title="LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI GIGAMALL" alt="LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI GIGAMALL">LỊCH HOẠT ĐỘNG TẾT NHÂM DẦN 2022 - TRUNG TÂM THƯƠNG MẠI THISO MALL</a>
                                     </h4>
-                                    <div class="des-article-item">GIGAMALL</div>
+                                    <div class="des-article-item">THISO MALL</div>
                                 </div>
                             </div>
                         </div>
                     </div><div class="col-md-4">
                         <div class="article-item">
                             <div class="bg-article-item">
-                                <a href="javascript:void(0)" title="CHƯƠNG TRÌNH BỐC THĂM TRÚNG THƯỞNG MỪNG SINH NHẬT VUI - CÙNG KHUI QUÀ KHỦNG" alt="CHƯƠNG TRÌNH BỐC THĂM TRÚNG THƯỞNG MỪNG SINH NHẬT VUI - CÙNG KHUI QUÀ KHỦNG"><div style="background-image: url('/data/2022/01/11/17434302_kv1080x1080png.png');"></div></a>
+                                <a href="javascript:void(0)" title="CHƯƠNG TRÌNH BỐC THĂM TRÚNG THƯỞNG MỪNG SINH NHẬT VUI - CÙNG KHUI QUÀ KHỦNG" alt="CHƯƠNG TRÌNH BỐC THĂM TRÚNG THƯỞNG MỪNG SINH NHẬT VUI - CÙNG KHUI QUÀ KHỦNG">
+                                    <div style="background-image: url('/data/2022/02/28/00240995_27462308429562280380004657887380037241146119n.jpg');"></div>
+                                </a>
                             </div>
                             <div class="info-article-item">
                                 <div>
