--- a/Gigamall/Views/Home/Member.cshtml
+++ b/Gigamall/Views/Home/Member.cshtml
@@ -62,13 +62,13 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <img src="/images/app/IOS-QRC.png" alt="GIGAMALL">
-                                <a href="https://itunes.apple.com/us/app/gigamall-vietnam/id1448013961?ls=1&amp;mt=8" target="_blank">
+                                <a href="javascript:void(0)">
                                     <img src="/images/app/app-store.png" alt="GIGAMALL">
                                 </a>
                             </div>
                             <div class="col-md-6">
                                 <img src="/images/app/Android.png" alt="GIGAMALL">
-                                <a href="https://play.google.com/store/apps/details?id=com.ms_apptech.gigamall" target="_blank">
+                                <a href="javascript:void(0)">
                                     <img src="/images/app/google-play.png" alt="GIGAMALL">
                                 </a>
                             </div>
