--- a/Gigamall/Views/Shared/_Header.cshtml
+++ b/Gigamall/Views/Shared/_Header.cshtml
@@ -11,8 +11,8 @@
             <div class="header-right">
                 <div class="info-gigamall-header">
                     <h2>TRUNG TÂM THƯƠNG MẠI THISO MALL</h2>
-                    <p>240 - 242 Phạm Văn Đồng,<br>P. Hiệp Bình Chánh,&nbsp;Q. Thủ Đức, TP.HCM</p>
-                    <p>Hotline: 028 666 00222 - Email: info@gigamall.com.vn</p>
+                    <p>SOFIC TOWER - 10 Mai Chi Tho,<br>Thu Duc City,&nbsp;Ho Chi Minh City</p>
+                    <p>Hotline: (028) 37425566 - Email: info@thisomall.com.vn</p>
                 </div>
                 <div class="menu">
 
@@ -57,7 +57,7 @@
                                     <li><a style="" href="javascript:void(0)" alt="Khác">Khác</a></li>
                                 </ul>
                             </li>
-                            <li><a href="javascript:void(0)" alt="Sơ đồ tầng">Sơ đồ tầng</a></li>
+                            @* <li><a href="javascript:void(0)" alt="Sơ đồ tầng">Sơ đồ tầng</a></li>*@
                             <li class="has-sub">
                                 <span class="submenu-button"></span>
                                 <a asp-action="Member" asp-controller="Home" alt="Thành viên">Thành viên</a>
@@ -67,7 +67,7 @@
                                 </ul>
                             </li>
                             <li><a asp-action="Utilities" asp-controller="Home" alt="Tiện ích">Tiện ích</a></li>
-                            <li><a href="javascript:void(0)" alt="Liên hệ">Liên hệ</a></li>
+                            <li><a href="@Url.Action("LoginWifi", "Home")" alt="Liên hệ">Wifi Marketing</a></li>
                             <li id="search_form" class="search_form">
                                 <form id="fsm" name="fsm" action="/xmlhttp.aspx?FID=6&amp;search=1" method="post">
                                     <input type="text" id="searchid" name="searchid" onfocusout="hidden_search_form()" placeholder="Nhập từ khoá" onkeypress="return keyEnter(event,'Search')" class="" onclick="this.value=''">
