--- a/MSA/Shared/MainLayout.razor
+++ b/MSA/Shared/MainLayout.razor
@@ -1,7 +1,10 @@
 ﻿@inherits LayoutComponentBase
 <_Header></_Header>
 @Body
+<_AboutUS></_AboutUS>
 <_Project></_Project>
+<_Customer></_Customer>
+<_Footer></_Footer>
 @*<div class="page">
         <div class="sidebar">
             <NavMenu></NavMenu>
@@ -17,3 +20,8 @@
             </div>
         </div>
     </div>*@
+<style>
+    html {
+        scroll-behavior: smooth;
+    }
+</style>
