--- a/MSA/Shared/_Header.razor
+++ b/MSA/Shared/_Header.razor
@@ -12,7 +12,7 @@
                     <h2>CÔNG TY TIN HỌC ỨNG DỤNG SAO MAI</h2>
                     <p>Email: info@ms-apptech.com</p>
                     <p>Website: www.ms-apptech.com</p>
-                    <p>Điện thoại: (028) 22156380 - (028) 22156382</p>
+                    <p>Điện thoại: (028)  - (028) </p>
                     @*<p>240 - 242 Phạm Văn Đồng,<br>P. Hiệp Bình Chánh,&nbsp;Q. Thủ Đức, TP.HCM</p>
                         <p>Hotline: 028 666 00222 - Email: info@gigamall.com.vn</p>*@
                 </div>
@@ -21,20 +21,19 @@
                     <div id="cssmenu">
                         <ul>
                             <li class="active">
-                                <a href="javascript:void(0)">Trang chủ</a>
+                                <a href="/">Trang chủ</a>
+                            </li>
+                            @*<li>
+                                    <a asp-action="Promotion" asp-controller="Home" alt="Giới thiệu">Giới thiệu</a>
+                                </li>*@
+                            @*<li>
+                                    <a href="javascript:void(0)" alt="Lĩnh vực hoạt động">Lĩnh vực hoạt động</a>
+                                </li>*@
+                            <li>
+                                <a href="javascript:void(0)" onclick="document.getElementById('project').scrollIntoView({behavior:'smooth'})" alt="Dự án">Dự án</a>
                             </li>
                             <li>
-                                <a asp-action="Promotion" asp-controller="Home" alt="Giới thiệu">Giới thiệu</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)" alt="Lĩnh vực hoạt động">Lĩnh vực hoạt động</a>
-                            </li>
-
-                            <li>
-                                <a asp-action="Utilities" asp-controller="Home" alt="Tiện ích">Sơ đồ tổ chức</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)" alt="Khách hàng">Khách hàng</a>
+                                <a href="javascript:void(0)" onclick="document.getElementById('customer').scrollIntoView({behavior:'smooth'})" alt="Khách hàng">Khách hàng</a>
                             </li>
                         </ul>
                     </div>
