--- a/MSA/Shared/_Project.razor
+++ b/MSA/Shared/_Project.razor
@@ -1,8 +1,8 @@
-﻿<div class="container utilities-list">
+﻿<div class="container utilities-list" id="project">
     <div class="row">
         <div class="info-group">
             <h1 class="title-group-home">
-                <a href="/vn/tien-ich/" alt="Tiện ích">DỰ ÁN</a>
+                <a href="/" alt="Tiện ích">DỰ ÁN</a>
             </h1>
         </div>
         <div class="col-sm-6">
@@ -82,6 +82,50 @@
                             Các tính năng nổi bật: lập trình mobile app đáp ứng kết nối đồng thời cao (CCU: 50-100K),
                             lắc mobile trúng thưởng, bắt thú di chuyển trên app, QR Code, Bar Code, E-voucher, Lottery
                             quay số trúng thưởng, tương tác với hệ thống POS
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/diamond-plaza.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">Smart promotion - Diamond Plaza </a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            Tư vấn giải pháp khuyến mãi thông minh - Diamond Plaza.
+                            Sử dụng thiết bị báo hiệu để xác định cửa hàng, tìm kiếm chương trình khuyến mãi đang diễn ra
+                            và bật thông báo cho khách hàng ở gần đó.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/saigon-center.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">Optimize OCR review process - SaiGon Center</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            Tư vấn giải pháp tối ưu hóa quy trình OCR - SaiGon Center.
+                            Cải thiện tốc độ duyệt hóa đơn OCR, giảm trường hợp hóa đơn giả mạo. Kết nối API từ POS đến CRM ở trạng thái
+                            trì hoãn (gửi dữ liệu trước, xem xét và phê duyệt hóa đơn sau).
+
                         </p>
                     </div>
                 </div>
