--- a/Gigamall/Views/Shared/_Footer.cshtml
+++ b/Gigamall/Views/Shared/_Footer.cshtml
@@ -86,7 +86,7 @@
                                 <div class="app">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <img src="~/images/app/IOS-QRC.png"><a href="javascript:void(0)"><img src="~/images/app/app-store.png"></a>
+                                            <img src="~/images/app/IOS-QRC.png"><a href="javascript:void(0)"> <img src="~/images/app/app-store.png" /></a>
                                         </div>
                                         <div class="col-md-6">
                                             <img src="~/images/app/Android.png"><a href="javascript:void(0)"><img src="~/images/app/google-play.png"></a>
