--- a/MSA/Shared/_Header.razor
+++ b/MSA/Shared/_Header.razor
@@ -23,18 +23,18 @@
                             <li class="active">
                                 <a href="/">Trang chủ</a>
                             </li>
-                            @*<li>
-                                    <a asp-action="Promotion" asp-controller="Home" alt="Giới thiệu">Giới thiệu</a>
-                                </li>*@
+                            <li>
+                                <a href="Tutorial" alt="Chia sẻ kiến thức">Chia sẻ kiến thức</a>
+                            </li>
                             @*<li>
                                     <a href="javascript:void(0)" alt="Lĩnh vực hoạt động">Lĩnh vực hoạt động</a>
                                 </li>*@
-                            <li>
-                                <a href="javascript:void(0)" onclick="document.getElementById('project').scrollIntoView({behavior:'smooth'})" alt="Dự án">Dự án</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)" onclick="document.getElementById('customer').scrollIntoView({behavior:'smooth'})" alt="Khách hàng">Khách hàng</a>
-                            </li>
+                            @*<li>
+                                    <a href="javascript:void(0)" onclick="document.getElementById('project').scrollIntoView({behavior:'smooth'})" alt="Dự án">Dự án</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" onclick="document.getElementById('customer').scrollIntoView({behavior:'smooth'})" alt="Khách hàng">Khách hàng</a>
+                                </li>*@
                         </ul>
                     </div>
                 </div>
