--- a/MSA/Pages/Index.razor
+++ b/MSA/Pages/Index.razor
@@ -1,1 +1,208 @@
 ﻿@page "/"
+
+
+<div class="container utilities-list">
+    <div class="row">
+        <div class="info-group">
+            <h1 class="title-group-home">
+                <a href="javascript:void(0)" alt="Tiện ích">VỀ CHÚNG TÔI</a>
+            </h1>
+        </div>
+        <div class="col-12">
+            <div class="intro-text" style="font-size: 20px;">
+                <p>
+                    Công ty TNHH Ứng dụng CNTT SAO MAI (MSA), với hơn 16 năm kinh nghiệm là nhà tư vấn và cung cấp
+                    giải pháp CNTT và chuyển đổi số với bề dày chuyên môn đã được kiểm chứng trong lĩnh vực bán lẻ hàng đầu
+                    tại Việt Nam. Các khách hàng tiêu biểu: Takashimaya, Gigamall, Diamond Plaza, Golden Gate, Circle K…
+                </p>
+            </div>
+
+        </div>
+        <div class="col-sm-6">
+            <div class="intro-text pt-2" style="font-size: 20px;">
+                <p>Thành lập năm 2006</p>
+                <p>Chuyên môn: POS, CRM / Loyalty, SCM (Supply chain management)</p>
+                <p>Tư vấn triến khai giải pháp Công Nghệ Thông Tin cho doanh nghiệp gồm số hóa và chuyển đổi số </p>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <img src="/images/P2P LOGO.png" width="400" height="200" />
+        </div>
+    </div>
+</div>
+<div class="container utilities-list" id="project">
+    <div class="row">
+        <div class="info-group">
+            <h1 class="title-group-home">
+                <a href="/" alt="Tiện ích">DỰ ÁN</a>
+            </h1>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="DỰ ÁN CRM/LOYALTY" alt="DỰ ÁN CRM/LOYALTY">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/crm-loyalty.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="DỰ ÁN CRM/LOYALTY" alt="DỰ ÁN CRM/LOYALTY">DỰ ÁN CRM/LOYALTY</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            <span>Các tính năng nổi bật: smart promotion, tích điểm, G-location, ví điện tử, đa chính sách theo từng khu vực, đổi điểm lấy quà, promotion news.</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="GIGAMALL MOBILE APP" alt="GIGAMALL MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/gigamall-mobile-app.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="GIGAMALL MOBILE APP" alt="GIGAMALL MOBILE APP">GIGAMALL MOBILE APP</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            <span>
+                                Các tính năng nổi bật: công nghệ OCR (chụp hình tích điểm), deep link thực hiện
+                                phối hợp quảng cáo với các đối tác (Grab), đổi điểm lấy quà, các game: vòng quay may mắn;
+                                quay số, thông tin gian hàng, Omni chanel: Youtube, News,...
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="AMAZING COFFEE MOBILE APP" alt="AMAZING COFFEE MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('images/amazing-coffee.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="AMAZING COFFEE MOBILE APP" alt="AMAZING COFFEE MOBILE APP">AMAZING COFFEE MOBILE APP</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            <span>Các tính năng nổi bật: tiếp thị liên kết, auto digital marketing, G-location, tích điểm / đổi quà, E-voucher, liên kết POS</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/red-season-mobile-app.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">RED SEASON MOBILE APP</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            Các tính năng nổi bật: lập trình mobile app đáp ứng kết nối đồng thời cao (CCU: 50-100K),
+                            lắc mobile trúng thưởng, bắt thú di chuyển trên app, QR Code, Bar Code, E-voucher, Lottery
+                            quay số trúng thưởng, tương tác với hệ thống POS
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/diamond-plaza.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">Smart promotion - Diamond Plaza </a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            Tư vấn giải pháp khuyến mãi thông minh - Diamond Plaza.
+                            Sử dụng thiết bị báo hiệu để xác định cửa hàng, tìm kiếm chương trình khuyến mãi đang diễn ra
+                            và bật thông báo cho khách hàng ở gần đó.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="article-item-utilities">
+                <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">
+                    <div class="bg-article-item-utilities">
+                        <div style="background-image: url('/images/saigon-center.png');"></div>
+                    </div>
+                </a>
+                <div class="info-article-item-utilities">
+                    <h4>
+                        <a title="RED SEASON MOBILE APP" alt="RED SEASON MOBILE APP">Optimize OCR review process - SaiGon Center</a>
+                    </h4>
+                    <div class="des-article-item-utilities">
+                        <p>
+                            Tư vấn giải pháp tối ưu hóa quy trình OCR - SaiGon Center.
+                            Cải thiện tốc độ duyệt hóa đơn OCR, giảm trường hợp hóa đơn giả mạo. Kết nối API từ POS đến CRM ở trạng thái
+                            trì hoãn (gửi dữ liệu trước, xem xét và phê duyệt hóa đơn sau).
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container utilities-list customer" id="customer">
+    <div class="row">
+        <div class="info-group">
+            <h1 class="title-group-home">
+                <a href="/" alt="Tiện ích">KHÁCH HÀNG</a>
+            </h1>
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/gigamall.png" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/golden-gate.png" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/circle-k.png" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/amazing.png" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/mykingdom.jpg" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/takashimaya.png" />
+        </div>
+        <div class="col-sm-3 image-center">
+            <img src="/images/Customer/diamond-plaza.png" />
+        </div>
+    </div>
+</div>
+
+<style>
+    .customer img {
+        width: 100%;
+        height: auto;
+    }
+
+    .image-center {
+        margin: auto 0px;
+    }
+</style>
