--- a/MSA/Shared/_AboutUS.razor
+++ b/MSA/Shared/_AboutUS.razor
@@ -7,8 +7,13 @@
         </div>
         <div class="col-sm-6">
             <div class="intro-text pt-5" style="font-size: 20px;">
-                <p>Thành lập năm 2009</p>
-                <p>Chuyên môn: POS, CRM/Loyalty, SCM(Supply chain management)</p>
+                <p>Thành lập năm 2006</p>
+                <p>
+                    •	Công ty TNHH Ứng dụng CNTT SAO MAI (MSA), với hơn 16 năm kinh nghiệm là nhà tư vấn và cung cấp
+                    giải pháp CNTT và chuyển đổi số với bề dày chuyên môn đã được kiểm chứng trong lĩnh vực bán lẻ hàng đầu
+                    tại Việt Nam. Các khách hàng tiêu biểu: Takashimaya, Gigamall, Diamond Plaza, Golden Gate, Circle K…
+                </p>
+                <p>Chuyên môn: POS, CRM / Loyalty, SCM (Supply chain management)</p>
                 <p>Tư vấn triến khai giải pháp Công Nghệ Thông Tin cho doanh nghiệp gồm số hóa và chuyển đổi số </p>
             </div>
 
